Added Services Page with Pricing Tables & FAQ

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -72,3 +72,16 @@ footer#main-footer {
 
 #about img {
   margin-top: -50px; }
+
+#faq .card {
+  border: #444; }
+  #faq .card a {
+    color: #fff;
+    text-decoration: none; }
+
+#faq .card-body {
+  background: #eee;
+  color: #333; }
+
+#faq .card-header {
+  background: #333; }
