--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -91,3 +91,22 @@ footer#main-footer {
     margin-top: -50px;
   }
 }
+
+#faq {
+  .card {
+    border: #444;
+    a {
+      color: #fff;
+      text-decoration: none;
+    }
+  }
+
+  .card-body {
+    background: #eee;
+    color: #333;
+  }
+
+  .card-header {
+    background: #333;
+  }
+}
